13 November 2007: Wouter
	- remove debug print.
	- fixup testbound exit when LIBEVENT_SIGNAL_PROBLEM exists.

12 November 2007: Wouter
	- fixup signal handling where SIGTERM could be ignored if a SIGHUP
	  arrives later on.
	- bugreports to unbound-bugs@nlnetlabs.nl
	- fixup testbound so it exits cleanly.
	- cleanup the caches on a reload, so that rrsetID numbers won't clash.

9 November 2007: Wouter
	- took ldns snapshot in repo.
	- default config file is /etc/unbound/unbound.conf.
	  If it doesn't exist, it is installed with the doc/example.conf file.
	  The file is not deleted on uninstall.
	- default listening is not all, but localhost interfaces.
	
8 November 2007: Wouter
	- Fixup chroot and drop user privileges.
	- new L root ip address in default hints.

1 November 2007: Wouter
	- Fixup of crash on reload, due to anchors in env not NULLed after
	  dealloc during deinit.
	- Fixup of chroot call. Happens after privileges are dropped, so
	  that checking the passwd entry still works.
	- minor touch up of clear() hashtable function.
	- VERB_DETAIL prints out what chdir, username, chroot is being done.
	- when id numbers run out, caches are cleared, as in design notes.
	  Tested with a mock setup with very few bits in id, it worked.
	- harden-dnssec-stripped: yes is now default. It insists on dnssec
	  data for trust anchors. Included tests for the feature.

31 October 2007: Wouter
	- cache-max-ttl config option.
	- building outside sourcedir works again.
	- defaults more secure:
		username: "unbound"
		chroot: "/etc/unbound"
	  The operator can override them to be less secure ("") if necessary.
	- fix horrible oversight in sorting rrset references in a message,
	  sort per reference key pointer, not on referencepointer itself.
	- pidfile: "/etc/unbound/unbound.pid" is now the default.
	- tests changed to reflect the updated default.
	- created hashtable clear() function that respects locks.

30 October 2007: Wouter