@@ -1,3 +1,6 @@
+14 November 2007: Wouter
+	- testbed script does not recreate configure, since its in svn now.
+
 13 November 2007: Wouter
 	- remove debug print.
 	- fixup testbound exit when LIBEVENT_SIGNAL_PROBLEM exists.
